vlib/v/checker/tests/like_operator_outside_orm_error.out
vlib/v/checker/tests/like_operator_outside_orm_error.vv:4:15: error: only `c`, `r`, `js` are recognized string prefixes, but you tried to use `like`
    2 |     name := 'Luke'
    3 | 
    4 |     println(name like 'L%')
      |                  ~~~~
    5 | }
